--- a/app/src/main/res/layout/item_posts.xml
+++ b/app/src/main/res/layout/item_posts.xml
@@ -1,9 +1,24 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+
+<androidx.cardview.widget.CardView
+
+    android:layout_height="wrap_content"
+    android:layout_width="match_parent"
+    android:elevation="10dp"
+
+    android:layout_marginHorizontal="16dp"
+    android:layout_marginBottom="16dp"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    >
+
+
+<androidx.constraintlayout.widget.ConstraintLayout
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:id="@+id/container_posts"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
+    android:background="@color/teal_700"
+ >
 
 
     <TextView
@@ -25,3 +40,4 @@
         app:layout_constraintTop_toBottomOf="@id/title"
 />
 </androidx.constraintlayout.widget.ConstraintLayout>
+</androidx.cardview.widget.CardView>
